--- a/index.html
+++ b/index.html
@@ -77,48 +77,48 @@
             <div class="modal-content" id="contenido-modal">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel" style="color: #ffd00f;">Alitas BBQ</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="background: #ffd00f;">
+                        <span aria-hidden=" true ">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
-                    <h2>La rutera:</h2>
-                    <p>Alitas con salsa BBQ de chocolate, acompañadas de papas andinas.<strong style="font-size: 16px; float: right;">s/17.00</strong></p>
-                    <h2>La colorada:</h2>
-                    <p>Alitas con salsa BBQ de maíz morado y beterraga, acompañadas de papas andinas.<strong style="font-size: 16px; float: right;">s/17.00</strong></p>
-                    <h2>La picante:</h2>
-                    <p>Alitas con salsa BBQ de chocolate picante, acompañadas con papas andinas.<strong style="font-size: 16px; float: right;">s/18.00</strong></p>
-                    <h2>La crispy:</h2>
-                    <p>Alitas crocantes, acompañadas de papas andinas.<strong style="font-size: 16px; float: right;">s/17.00</strong></p>
+                <div class="modal-body ">
+                    <h2>La rutera:<strong>s/17.00</strong></h2>
+                    <p>Alitas con salsa BBQ de chocolate, acompañadas de papas andinas.</p>
+                    <h2>La colorada:<strong>s/17.00</strong></h2>
+                    <p>Alitas con salsa BBQ de maíz morado y beterraga, acompañadas de papas andinas.</p>
+                    <h2>La picante:<strong>s/18.00</strong></h2>
+                    <p>Alitas con salsa BBQ de chocolate picante, acompañadas con papas andinas.</p>
+                    <h2>La crispy:<strong>s/17.00</strong></h2>
+                    <p>Alitas crocantes, acompañadas de papas andinas.</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="modal fade" id="tacos" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content" id="contenido-modal">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel" style="color: #ffd00f;">Tacos Ruteros</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+    <div class="modal fade " id="tacos" tabindex="-1 " role="dialog " aria-labelledby="exampleModalLabel " aria-hidden="true ">
+        <div class="modal-dialog " role="document ">
+            <div class="modal-content " id="contenido-modal">
+                <div class="modal-header ">
+                    <h5 class="modal-title " id="exampleModalLabel " style="color: #ffd00f; ">Tacos Ruteros</h5>
+                    <button type="button " class="close " data-dismiss="modal " aria-label="Close " style="background: #ffd00f;">
+                        <span aria-hidden="true ">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
-                    <h2>Tacos con carne:</h2>
+                <div class="modal-body ">
+                    <h2>Tacos con carne: <strong>s/20.00</strong></h2>
                     <p>Tortilla de maíz hecho en casa acompañado de lomo fino salpimentado salteado con vino blanco con su picor rutero tradicional
-                        <strong style="font-size: 16px; float: right;">s/20.00</strong>
+
                     </p>
-                    <h2>Tacos con pollo:</h2>
+                    <h2>Tacos con pollo:<strong>s/20.00</strong></h2>
                     <p>Tortilla de maíz hecho en casa trozos de pollo Crispy marinado en especies y hierbas aromáticas , Salteado con mantequilla y vino blanco con su picor rutero tradicional.
-                        <strong style="font-size: 16px; float: right;">s/20.00</strong></p>
+                    </p>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl " crossorigin="anonymous "></script>
 </body>
 
 </html>
