--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="ochenta">
                 <div class="border-yellow">
-                    <h2 class="text-center">Piqueos</h2>
+                    <h2 class="text-center" data-toggle="modal" data-target="#piqueos">Piqueos</h2>
                 </div>
             </div>
             <div class="twenty">
@@ -44,7 +44,7 @@
             </div>
             <div class="ochenta">
                 <div class="border-yellow">
-                    <h2 class="text-center">Combos</h2>
+                    <h2 class="text-center" data-toggle="modal" data-target="#combos">Combos</h2>
                 </div>
             </div>
             <div class="twenty">
@@ -52,7 +52,7 @@
             </div>
             <div class="ochenta">
                 <div class="border-yellow">
-                    <h2 class="text-center">Bebidas</h2>
+                    <h2 class="text-center" data-toggle="modal" data-target="#bebidas">Bebidas</h2>
                 </div>
             </div>
             <div class="twenty">
@@ -60,7 +60,7 @@
             </div>
             <div class="ochenta">
                 <div class="border-yellow">
-                    <h2 class="text-center">Porciones</h2>
+                    <h2 class="text-center" data-toggle="modal" data-target="#porciones">Porciones</h2>
                 </div>
             </div>
             <div class="twenty">
@@ -111,6 +111,148 @@
                     <h2>Tacos con pollo:<strong>s/20.00</strong></h2>
                     <p>Tortilla de maíz hecho en casa trozos de pollo Crispy marinado en especies y hierbas aromáticas , Salteado con mantequilla y vino blanco con su picor rutero tradicional.
                     </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade " id="piqueos" tabindex="-1 " role="dialog " aria-labelledby="exampleModalLabel " aria-hidden="true ">
+        <div class="modal-dialog " role="document ">
+            <div class="modal-content " id="contenido-modal">
+                <div class="modal-header ">
+                    <h5 class="modal-title " id="exampleModalLabel " style="color: #ffd00f; ">Piqueos</h5>
+                    <button type="button " class="close" data-dismiss="modal" aria-label="Close" style="background: #ffd00f;">
+                        <span aria-hidden="true ">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body ">
+                    <h2>Tequeños: <strong>s/13.00</strong></h2>
+                    <p>10 wantanes rellenos de queso andino, acompañados con crema de aguacate, hiervas y especias.
+                    </p>
+                    <h2>Salchipapas:<strong>s/15.00</strong></h2>
+                    <p>Salchicha ahumada y salchicha clásica, acompañadas con papas andinas.
+                    </p>
+                    <h2>Choripapas:<strong>s/16.00</strong></h2>
+                    <p>Chorizo parrillero y salchicha clásica, compañados con papas andinas.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade " id="combos" tabindex="-1 " role="dialog " aria-labelledby="exampleModalLabel " aria-hidden="true ">
+        <div class="modal-dialog " role="document ">
+            <div class="modal-content " id="contenido-modal">
+                <div class="modal-header ">
+                    <h5 class="modal-title " id="exampleModalLabel " style="color: #ffd00f; ">Combos</h5>
+                    <button type="button " class="close" data-dismiss="modal" aria-label="Close" style="background: #ffd00f;">
+                        <span aria-hidden="true ">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body ">
+                    <h2>Combo 1: <strong>s/25.00</strong></h2>
+                    <p>Salchipapas + 5 alitas a elección.
+                    </p>
+                    <h2>Combo 2:<strong>s/25.00</strong></h2>
+                    <p>Choripapas + tequeños.
+                    </p>
+                    <h2>Combo 3:<strong>s/40.00</strong></h2>
+                    <p>Salchipapas + 5 alitas a elección + tequeños.
+                    </p>
+                    <h2>Combo 4:<strong>s/40.00</strong></h2>
+                    <p>Salchipapas + 5 alitas a elección + tetera.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade " id="bebidas" tabindex="-1 " role="dialog " aria-labelledby="exampleModalLabel " aria-hidden="true ">
+        <div class="modal-dialog " role="document ">
+            <div class="modal-content " id="contenido-modal">
+                <div class="modal-header ">
+                    <h5 class="modal-title " id="exampleModalLabel " style="color: #ffd00f; ">Bebidas</h5>
+                    <button type="button " class="close" data-dismiss="modal" aria-label="Close" style="background: #ffd00f;">
+                        <span aria-hidden="true ">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body ">
+                    <h2>Teteras: </h2>
+                    <ul>
+                        <li>Té flor de Jamaica
+                            <r style="float: right;">s/17.00</r>
+                        </li>
+                        <li>Té de Maracuyá
+                            <r style="float: right;">s/17.00</r>
+                        </li>
+                        <li>Té de piña con Manzana
+                            <r style="float: right;">s/17.00</r>
+                        </li>
+                        <li>Té clásico
+                            <r style="float: right;">s/15.00</r>
+                        </li>
+                    </ul>
+                    <h2>Cervezas artesanales:</h2>
+                    <ul>
+                        <li>
+                            <r style="font-weight: 800;">Bardock</r><br> IPA, Red, Ale, Pale, Porter.
+                            <r style="float: right;">s/15.00</r>
+                        </li>
+                        <li>
+                            <r style="font-weight: 800;">Taruka</r><br> IPA, Red Ipa, Porter.
+                            <r style="float: right;">s/15.00</r>
+                        </li>
+                        <li>
+                            <r style="font-weight: 800;">Alma Andina</r><br>Doble IPA, Doppelbock.
+                            <r style="float: right;">s/15.00</r>
+                        </li>
+                    </ul>
+                    <h2>Cervezas y otras bebidas:</h2>
+                    <ul>
+                        <li>Cusqueña 620ml
+                            <r style="float: right;">s/10.00</r>
+                        </li>
+                        <li>Cusqueña 310ml
+                            <r style="float: right;">s/6.00</r>
+                        </li>
+                        <li>Gaseosa Personal
+                            <r style="float: right;">s/5.00</r>
+                        </li>
+                        <li>Agua
+                            <r style="float: right;">s/3.00</r>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade " id="porciones" tabindex="-1 " role="dialog " aria-labelledby="exampleModalLabel " aria-hidden="true ">
+        <div class="modal-dialog " role="document ">
+            <div class="modal-content " id="contenido-modal">
+                <div class="modal-header ">
+                    <h5 class="modal-title " id="exampleModalLabel " style="color: #ffd00f; ">Porciones</h5>
+                    <button type="button " class="close" data-dismiss="modal" aria-label="Close" style="background: #ffd00f;">
+                        <span aria-hidden="true ">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body ">
+                    <ul>
+                        <li>Salsa BBQ Rutera
+                            <r style="float: right;">s/5.00</r>
+                        </li>
+                        <li>Salsa BBQ Colorada
+                            <r style="float: right;">s/5.00</r>
+                        </li>
+                        <li>Salsa BBQ Picante
+                            <r style="float: right;">s/5.00</r>
+                        </li>
+                        <li>Guacamole
+                            <r style="float: right;">s/5.00</r>
+                        </li>
+                        <li>Papas
+                            <r style="float: right;">s/5.00</r>
+                        </li>
+                        <li>Tequeños
+                            <r style="float: right;">s/5.00</r>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
